--- a/01-qr-code-component-main/styles.css
+++ b/01-qr-code-component-main/styles.css
@@ -1,6 +1,6 @@
 body{
     background-color: hsl(212, 45%, 89%);
-    font-family: 'Plus Jakarta Sans', 'Inter', 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+    font-family: 'Outfit' , sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
